[gd_scene load_steps=5 format=2]

[ext_resource path="res://lighting/source/shade_masks.gd" type="Script" id=1]
[ext_resource path="res://lighting/source/light_mesh.gd" type="Script" id=2]
[ext_resource path="res://lighting/source/light_source.gd" type="Script" id=3]
[ext_resource path="res://lighting/source/light_cast.gd" type="Script" id=4]

[node name="LightSource" type="Node2D"]
script = ExtResource( 3 )
_layers = PoolRealArray( 32, 2, 8 )

[node name="LightMesh" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="LightMesh"]
cast_to = Vector2( 20, 0 )
collision_mask = 32
script = ExtResource( 4 )

[node name="ShadeMasks" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
